Timeseries collection is missing default validator after upgrade to viewless

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • Hide

      Upgrade FCV from 8.0 to 9.0 and then perform a raw insert with malformed bucket on a timeseries collection.

      Show
      Upgrade FCV from 8.0 to 9.0 and then perform a raw insert with malformed bucket on a timeseries collection.
    • CAR Team 2026-02-02
    • 🟦 Shard Catalog
    • None
    • None
    • None
    • None
    • None
    • None

      Legacy timeseries collections used to have a persisted validator doc stored among the collection options, on the other side for viewless timeseries collection we calculate a runtime the default validator for the buckets and store it in the collection catalog (SERVER-105786).

      The problem is that during upgrade from legacy to viewless timeseries collections format we correctly remove the persisted legacy validator but we don't set the inMemory-only validator.

            Assignee:
            Tommaso Tocci
            Reporter:
            Tommaso Tocci
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: