SERVER-117761 Timeseries collection is missing default validator after upgrade to viewless (#46944)

GitOrigin-RevId: 65104d7cffa9ce0333a6535028a621d8d04ef2cd