src/mongo/db/shard_role/shard_catalog/virtual_collection_impl.h
@@ -237,7 +237,7 @@ public:
     }
 
     Status updateValidator(OperationContext* opCtx,
-                           BSONObj newValidator,
+                           BSONObj newValidatorDoc,
                            boost::optional<ValidationLevelEnum> newLevel,
                            boost::optional<ValidationActionEnum> newAction) final {
         unimplementedTasserted();
